# bevy_monorepo

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile  package-lock.json  package.json
ProjectSand/: .eslintignore  .eslintrc.json  .prettierignore  index.html  package.json  tsconfig.json  vite.config.js
ProjectSand/public/: styles.css
ProjectSand/src/: canvasConfig.ts  cursor.ts  elements.ts  game.ts  menu.ts  particles.ts  softBody.ts  spigots.ts  util.ts  zombies.ts
ProjectSandBevy/: Cargo.toml
ProjectSandBevy/src/: lib.rs  main.rs
ProjectSandBevy/src/elements/: mod.rs  types.rs
ProjectSandBevy/src/particles/: actions.rs  manager.rs  mod.rs  render.rs  types.rs
ProjectSandBevy/src/plugins/: mod.rs
ProjectSandBevy/src/simulation/: grid.rs  mod.rs  physics.rs
ProjectSandBevy/src/spigots/: mod.rs
ProjectSandBevy/src/systems/: mod.rs
avian_3d_character/: Cargo.toml
compute_shader_falling_sand/: Cargo.toml
compute_shader_falling_sand/assets/: falling_sand.wgsl
compute_shader_falling_sand/src/: elements.rs  lib.rs  main.rs
compute_shader_falling_sand/src/plugins/: mod.rs
compute_shader_falling_sand/src/systems/: mod.rs
compute_shader_game_of_life/: Cargo.toml
compute_shader_game_of_life/assets/: game_of_life.wgsl
compute_shader_game_of_life/src/: main.rs
compute_shader_sand/: Cargo.toml
compute_shader_sand/assets/: compute_shader_sand.wgsl
compute_shader_sand/src/: main.rs
docs/superpowers/plans/: 2026-04-29-parallel-chunk-pipeline.md  2026-04-29-voxel-game-phase1.md  2026-04-29-voxel-game-phase2.md
docs/superpowers/specs/: 2026-04-28-voxel-game-design.md  2026-04-29-parallel-chunk-pipeline-design.md
move_box/: Cargo.toml
move_box/src/: client.rs  lib.rs  main.rs  server.rs  ui.rs
my_game/: Cargo.toml
my_game/.github/workflows/: release.yaml
my_game/src/: main.rs
scafold_2d/: Cargo.toml  README.md
scafold_2d/.github/workflows/: release.yaml
scafold_2d/src/: main.rs
untitled_game/: Cargo.toml
untitled_game/art/: untitled_game.blend
untitled_game/assets/: untitled_game.glb
untitled_game/src/: crs.rs  game.rs  lib.rs  main.rs  menu.rs
untitled_game/src/cameras/: first_person.rs  mod.rs  third_person.rs
voxel_game/: Cargo.toml
voxel_game/assets/: recipes.ron
voxel_game/benches/: generation.rs  meshing.rs
voxel_game/docs/superpowers/plans/: 2026-04-29-lod-system.md  2026-04-30-spawn-world-loading.md
voxel_game/docs/superpowers/specs/: 2026-04-29-lod-system-design.md  2026-04-30-spawn-world-loading-design.md  backlog.md
voxel_game/src/: config.rs  game_mode.rs  lib.rs  main.rs  types.rs
voxel_game/src/chunk/: loading.rs  lod.rs  meshing.rs  mod.rs  rendering.rs
voxel_game/src/inventory/: crafting.rs  mod.rs  ui.rs
voxel_game/src/player/: camera.rs  controller.rs  hud.rs  interaction.rs  mod.rs
voxel_game/src/simulation/: debris.rs  mod.rs
voxel_game/src/ui/: audio.rs  mod.rs
voxel_game/src/ui/audio/: procedural.rs
voxel_game/src/ui/menus/: credits.rs  main.rs  pause.rs  settings.rs
voxel_game/src/ui/screens/: gameplay.rs  loading.rs  mod.rs  splash.rs  title.rs  world_loading.rs
voxel_game/src/ui/theme/: interaction.rs  widget.rs
voxel_game/src/world/: flat.rs  mod.rs  procedural.rs
voxel_game/tests/: debris_integration.rs  parallel_generation.rs
