[package]
name = "avian_3d_character"
version = "0.0.0"
authors = ["Collin Diekvoss <collin@diekvoss.com>"]
edition = "2024"
publish = false

[features]
default = ["client", "gui", "server", "netcode", "udp"]
client = [
  "gui",
  "lightyear/client",
  "lightyear_examples_common/client"
]
gui = [
  "lightyear_examples_common/gui"
]
server = [
  "lightyear/server",
  "lightyear_examples_common/server"
]
netcode = [
  "lightyear_examples_common/netcode"
]
udp = [
  "lightyear_examples_common/udp",
  "lightyear/udp",
]

[dependencies]
lightyear = { version = "0.24", features = [
  "interpolation",
  "prediction",
  "replication",
  "leafwing",
  "avian3d",
] }
lightyear_frame_interpolation = "0.24"
lightyear_examples_common = "0.24"
leafwing-input-manager = { version = "0.17.1", default-features = false, features = [
  "keyboard",
  "gamepad",
] }
avian3d = { version = "0.3", features = [
  "3d",
  "f32",
  "parry-f32",
  "parallel",
  "serialize",
] }
serde = "1"
bevy = "0.16"

[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = "0.1.7"

[package.metadata.bevy_cli.web]
rustflags = ["--cfg", "getrandom_backend=\"wasm_js\""]
default-features = false
features = ["client", "netcode"]
