[package]
name = "voxel_game"
version = "0.1.0"
edition = "2024"

[features]
default = ["dev_native"]
dev = [
    "bevy/dynamic_linking",
    "bevy/bevy_dev_tools",
]
dev_native = ["dev", "bevy/file_watcher"]

[dependencies]
bevy = "0.16"
avian3d = { version = "0.3", features = ["3d", "f32", "parry-f32"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "meshing"
harness = false
