[package]
name = "voxel_game"
authors = ["Collin Diekvoss <Collin@Diekvoss.com>"]
version = "0.1.0"
edition = "2024"

[features]
default = ["dev_native"]
dev = [
    "bevy/dynamic_linking",
    "bevy/bevy_dev_tools",
]
dev_native = ["dev", "bevy/file_watcher"]

[dependencies]
bevy = { version = "0.18", default-features = false, features = ["3d", "default_font"] }
avian3d = { version = "0.6", features = ["3d", "f32", "parry-f32"] }
serde = { version = "1", features = ["derive"] }
noise = "0.9"
ron = "0.8"
bincode = "1.3"
rodio = { version = "0.20", default-features = false }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "meshing"
harness = false

[[bench]]
name = "generation"
harness = false
